K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapped-blogs
  namespace: snapped-blogs
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "snapped-blogs-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: gce
  rules:
  - host: snapped-blogs.mukhul-menon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snapped-frontend
            port:
              number: 80

  - host: snapped-backend.mukhul-menon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snapped-backend
            port:
              number: 80
